--- a/index.html
+++ b/index.html
@@ -2,12 +2,38 @@
 <html>
 <head>
 	<title>ScriptEd Unit 9: Linking pages</title>
+	<link rel="stylesheet" href="./style/homestyle.css" type="text/css" />
+	<script type="text/javascript" src="./action.js"></script>
+	
 </head>
-<body>
-		<h1>This site will link pages locally and externally</h1>
-		<a href="pages/page1.html">Page 1</a>
-		<a href="pages/page2.html">Page 2</a>
-		<a href="pages/page3.html">Page 3</a>
-		<br><img src="images/ScriptEd.png"></br>
+
+
+<body class="green">
+	   
+<div id="header">
+	 <h1>Welcome to my first website!</h1>
+</div>	   
+	 
+  	<div class="start"> 
+  	     <a  href="pages/page1.html">Favorite TV Show</a>
+  	     <a  href="pages/page2.html">Favorite Movie</a>
+  		 <a  href="pages/page3.html">Favorite Type of Music</a> 
+    </div>
+  
+  
+  	<h3> About Me: Mia McDuffie</h3>
+  	
+  	<div class="me">
+  	<img src="http://bit.ly/1VjYnwl" alt="book" height="300" width="300">
+  	</div>
+  	
+  
+	<audio class="sia" controls loop autoplay>
+        <source src="./music/Sia.mp3" type="audio/mpeg" id="mp3source">
+	  </audio>	
+		
+		
+		
+
 </body>
 </html>
