--- a/index.html
+++ b/index.html
@@ -4,21 +4,41 @@
 	<title>ScriptEd Unit 9: Linking pages</title>
 	<link rel="stylesheet" href="./style/homestyle.css" type="text/css" />
 	<script type="text/javascript" src="./action.js"></script>
-	
+	<meta charset="utf-8">
+ 	 <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 
 <body class="green">
 	   
+		
+	
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="pages/page1.html">Favorite TV Show</a> </li>
+      <li><a href="pages/page2.html">Favorite Movie</a></li>
+      <li><a href="pages/page3.html">Favorite Type of Music</a> </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+<div class="container">
 <div id="header">
 	 <h1>Welcome to my first website!</h1>
 </div>	   
 	 
-  	<div class="start"> 
-  	     <a  href="pages/page1.html">Favorite TV Show</a>
-  	     <a  href="pages/page2.html">Favorite Movie</a>
-  		 <a  href="pages/page3.html">Favorite Type of Music</a> 
-    </div>
+  	
   
   
   	<h3> About Me: Mia McDuffie</h3>
@@ -32,8 +52,7 @@
         <source src="./music/Sia.mp3" type="audio/mpeg" id="mp3source">
 	  </audio>	
 		
-		
-		
 
+</div>
 </body>
 </html>
