--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     
-    <link rel="stylesheet" href="../style/style.css" type="text/css" />
+    <link rel="stylesheet" href="../style/page1style.css" type="text/css" />
     <script type="text/javascript" src="../action.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
